--- a/nxy-base-web/pom.xml
+++ b/nxy-base-web/pom.xml
@@ -23,10 +23,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!-- spring security 启动器-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
@@ -64,9 +64,6 @@
         </dependency>
         <!-- application.yml 配置处理器-->
         <dependency>
-            第26讲 整合Mybatis Plus
-            1.1、新建application.yml文件
-            1、在itmk-base-web模块resources文件下新建 application.yml文件
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
