--- a/nxy-base-web/src/main/resources/application.yml
+++ b/nxy-base-web/src/main/resources/application.yml
@@ -11,3 +11,9 @@ spring:
     url: jdbc:mysql://localhost:3306/nxy-system?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     username: training
     password: 123456
+#jwt配置
+jwt:
+  secret: com.nxy
+  expiration: 300000
+nxy:
+  loginUrl: /api/user/login
